feat; add body documentation
