# docs/swagger.json
@@ -30,6 +30,17 @@
                 ],
                 "summary": "push multiple logs at once",
                 "operationId": "batch",
+                "parameters": [
+                    {
+                        "description": "batch some logs",
+                        "name": "Payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.LogBatchRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -93,6 +104,17 @@
                 ],
                 "summary": "push a log",
                 "operationId": "log",
+                "parameters": [
+                    {
+                        "description": "send a log",
+                        "name": "Payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.LogRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -135,6 +157,17 @@
                 ],
                 "summary": "register a logstream",
                 "operationId": "register-stream",
+                "parameters": [
+                    {
+                        "description": "information about the logstream to create",
+                        "name": "Payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.RegisterRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -177,6 +210,17 @@
                 ],
                 "summary": "unregister a logstream",
                 "operationId": "unregister-stream",
+                "parameters": [
+                    {
+                        "description": "information about the logstream to unregister",
+                        "name": "Payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/http.UnregisterRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -293,6 +337,45 @@
                 }
             }
         },
+        "http.LogBatchRequest": {
+            "type": "object",
+            "properties": {
+                "logs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/http.LogBatchSingleLog"
+                    }
+                },
+                "stream": {
+                    "type": "string"
+                }
+            }
+        },
+        "http.LogBatchSingleLog": {
+            "type": "object",
+            "properties": {
+                "log": {
+                    "type": "string"
+                },
+                "timestamp": {
+                    "type": "integer"
+                }
+            }
+        },
+        "http.LogRequest": {
+            "type": "object",
+            "properties": {
+                "log": {
+                    "type": "string"
+                },
+                "stream": {
+                    "type": "string"
+                },
+                "timestamp": {
+                    "type": "integer"
+                }
+            }
+        },
         "http.LogStreamResponse": {
             "type": "object",
             "properties": {
@@ -326,6 +409,25 @@
                     "items": {
                         "$ref": "#/definitions/http.LogStreamResponse"
                     }
+                }
+            }
+        },
+        "http.RegisterRequest": {
+            "type": "object",
+            "properties": {
+                "alias": {
+                    "type": "string"
+                }
+            }
+        },
+        "http.UnregisterRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "key": {
+                    "type": "string"
                 }
             }
         },
